<resources>
    <string name="app_name">RecipierV1</string>
    <string name="app_name_short">Recipier</string>
    <string name="user_name">User Name</string>
    <string name="phone">Phone</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="reenter_password">Re-enter Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register_short">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Forgot Password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="add_ingredients">Add Ingredients</string>
    <string name="enter_ingredients">Enter Ingredients</string>
    <string name="proceed">proceed</string>
    <string name="clear">clear</string>
    <string name="ingredient_list">Ingredient List:</string>
    <string name="auth_failed">Registration/Login Unsuccessful. Please check your Internet Connection and try again.</string>
</resources>
