<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hackdav.recipierv1.LoginActivity"
    android:background="@drawable/temp2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textSize="48sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/app_name_short" />

    <EditText
        android:id="@+id/LogEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20sp"
        android:hint="@string/prompt_email"
        android:background="@android:color/background_light"
        android:textColorHint="@android:color/black"
        android:inputType="textEmailAddress"
        android:layout_centerInParent="true"
        android:padding="2dp">
    </EditText>
    <requestFocus android:id="@+id/requestFocus" />

    <EditText
        android:id="@+id/LogPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20sp"
        android:hint="@string/prompt_password"
        android:background="@android:color/background_light"
        android:textColorHint="@android:color/black"
        android:inputType="textPassword"
        android:layout_below="@+id/LogEmail"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:padding="2dp"/>

    <Button
        android:id="@+id/btnSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/action_sign_in_short"
        android:textSize="24sp"
        android:background="#191970"
        android:textColor="@android:color/white"
        android:layout_below="@+id/LogPass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="fill_parent"
        android:layout_height="32dp"
        android:text="@string/action_register_short"
        android:background="#191970"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_below="@+id/btnSignin"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp" />

    <Button
        android:id="@+id/btnForgot"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:text="@string/action_forgot_password"
        android:background="@android:color/white"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
