<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@android:color/white">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/enter_ingredients"
    android:textSize="30sp"
    android:layout_centerHorizontal="true"
    android:textAlignment="center"
    android:textColor="@android:color/black"
    android:padding="2dp"
    android:background="@android:color/holo_blue_bright"
    android:id="@+id/editText3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:ems="10"
        android:textSize="24sp"
        android:background="#eeeeee"
        android:hint="@string/ingredient_list"
        android:textColorHint="@android:color/holo_green_dark"
        android:textColor="@android:color/holo_green_dark"
        android:layout_below="@+id/editText3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:id="@+id/tableLayout"
            android:scrollbars="horizontal"
            android:scrollbarAlwaysDrawHorizontalTrack="true">
            <TableRow>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Potato"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="22sp"
                    android:id="@+id/C10"
                    android:onClick="onCheckboxClicked"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Brinjal"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="22sp"
                    android:id="@+id/C11"
                    android:onClick="onCheckboxClicked"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tomato"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="22sp"
                    android:id="@+id/C12"
                    android:onClick="onCheckboxClicked"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Beans"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="22sp"
                    android:id="@+id/C13"
                    android:onClick="onCheckboxClicked"/>
            </TableRow>
            <TableRow>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pumpkin"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="22sp"
                    android:id="@+id/C14"
                    android:onClick="onCheckboxClicked"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cabbage"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="22sp"
                    android:id="@+id/C15"
                    android:onClick="onCheckboxClicked"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Okra"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="22sp"
                    android:id="@+id/C16"
                    android:onClick="onCheckboxClicked"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Carrot"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="22sp"
                    android:id="@+id/C17"
                    android:onClick="onCheckboxClicked"/>
            </TableRow>
            <TableRow>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Egg"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="22sp"
                    android:id="@+id/C19"
                    android:onClick="onCheckboxClicked"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Chicken"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="22sp"
                    android:id="@+id/C20"
                    android:onClick="onCheckboxClicked"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Prawn"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="22sp"
                    android:id="@+id/C21"
                    android:onClick="onCheckboxClicked"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Fish"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="22sp"
                    android:id="@+id/C22"
                    android:onClick="onCheckboxClicked"/>
            </TableRow>
        </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_ingredients"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:background="#FFDF00"
        android:textColor="@android:color/black"
        android:padding="6dp"
        android:id="@+id/button2"
        android:layout_below="@+id/tableLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proceed"
        android:textAllCaps="true"
        android:padding="6dp"
        android:textSize="24sp"
        android:layout_marginEnd="36dp"
        android:background="@android:color/holo_green_light"
        android:id="@+id/button1"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:textAllCaps="true"
        android:padding="6dp"
        android:background="@android:color/holo_red_light"
        android:textSize="24sp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="35dp"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_alignParentStart="true" />
</RelativeLayout>